Changes images folder to file.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing = "20">
     <tr>
-      <td><img src="images/circle sagar.png" alt="Sagar's Picture" width="150" height="150"></td>
+      <td><img src="circle sagar.png" alt="Sagar's Picture" width="150" height="150"></td>
       <td>
         <h1>Sagar Patel</h1>
         <p><em>Incoming Freshman at <strong>University of Illinois at Chicago</strong>.</em></p>
