--- a/hobbies.html
+++ b/hobbies.html
@@ -8,9 +8,9 @@
     <h3>My Hobbies</h3>
     <ul>
       <ol>
-        <li><a href = "video/tennis.mp4">Tennis</a></li>
+        <li><a href = "tennis.mp4">Tennis</a></li>
         <li>Reading</li>
-        <li><a href="images/hike.jpg">Hiking</a></li>
+        <li><a href="hike.jpg">Hiking</a></li>
       </ol>
     </ul>
   </body>
